@@ -22,7 +22,7 @@ public class Dates {
     private LocalDate deadLine;
 
     // Constructor
-    public Dates(Subject.Subject subj, LocalDate deadLine) {
+    public Dates(Subject subj, LocalDate deadLine) {
         this.subjName = subj.getCourseName();
         this.deadLine = deadLine;
     }
@@ -60,14 +60,14 @@ public class Dates {
             LocalDate today = LocalDate.now();
             // Get the date of the last assignment deadline (last element of the sorted
             // list)
-            LocalDate lastAssDate = assignments.getLast().getDate();
+            LocalDate lastAssDate = assignments.get(assignments.size()-1).getDate();
             // Return the calculated days
             return (int) ChronoUnit.DAYS.between(today, lastAssDate);
         } else if (!exams.isEmpty() && assignments.isEmpty()) {
             // Get the current date
             LocalDate today = LocalDate.now();
             // Get the date of the last exam (last element of the sorted list)
-            LocalDate lastExamDate = exams.getLast().getDate();
+            LocalDate lastExamDate = exams.get(exams.size()-1).getDate();
             // Return the calculated days
             return (int) ChronoUnit.DAYS.between(today, lastExamDate);
         } else if (!exams.isEmpty() && !assignments.isEmpty()) {
@@ -75,9 +75,9 @@ public class Dates {
             LocalDate today = LocalDate.now();
             // Get the date of the last assignment deadline (last element of the sorted
             // list)
-            LocalDate lastAssDate = assignments.getLast().getDate();
+            LocalDate lastAssDate = assignments.get(assignments.size()-1).getDate();
             // Get the date of the last exam (last element of the sorted list)
-            LocalDate lastExamDate = exams.getLast().getDate();
+            LocalDate lastExamDate = exams.get(exams.size()-1).getDate();
             // return the deadline which is most faraway
             if (lastAssDate.isBefore(lastExamDate)) {
                 return (int) ChronoUnit.DAYS.between(today, lastExamDate);
